--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,121 +1,654 @@
-html body{
-  max-width: 2400px;
-  background-image: url(../images/Aus.jpeg);
-  min-height: 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  align-content: center;
-}
-html{
+
+html {
   scroll-behavior: smooth;
 }
 
-
-/* GRID SETUP*/
-.gridbody {
-  border: 30px solid transparent;
-  border-color: black;
-  background-color: rgba(94, 115, 101, 0.4); 
-  border-radius: 30px;
-  margin-top: 75px;
-  margin-bottom: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  height: auto;
-  width: 50vw;
-  -moz-box-shadow: 0 0 15px black;
-  -webkit-box-shadow: 0 0 15px black;
-  box-shadow: 0 0 15px black;
-  z-index: 3;
+body {
+  margin: 0;
+  padding: 5px 0;
+  background-color: #000;
+  font-family: 'Antonio', 'Arial Narrow', 'Avenir Next Condensed', sans-serif;
+  line-height: 1.5;
+  color: #F2DF6F;
+  text-align: center;
 }
-/* HEADING SETUP */
-.gridbody .heading {
+p {
+  color: #FFFFCB;
+}
+
+
+@keyframes blink {
+  0% {
+      opacity: 0
+  }
+
+  49% {
+      opacity: 0
+  }
+
+  50% {
+      opacity: 1
+  }
+}
+
+.wrap {
   display: flex;
-  bottom: 0;
-  margin: 0 auto 0 auto;
-  padding: 12px 0;
-  background: linear-gradient(#CF9DCF 50%, #CF6262 50%);
-  border-radius: 20px 0 0 20px;
+  margin: 0 auto;
+  padding: 0 10px 0 5px;
   overflow: hidden;
-  position: relative;
-  z-index: 1;
- }
-.gridbody .heading-panel{
-    width: 12%;
-    max-width: 130px;
-    height: 20px;
-    margin: auto;
-    padding: 10px 0 0 1%;
-    background-color: #F2DF6F;
-    border-top: 5px solid #000;
-    border-bottom: 5px solid #000;
-    font-size: .85rem;
-    font-weight: bold;
-    color: #000;
-  }
-.heading-inside {
-    flex: 1;
-    min-height: 100px;
-    background-color: #000;
-    border-radius: 20px 0 0 20px;
-    padding: 1.5rem 1rem;
-    z-index: 2;
-  }
-.heading-text {
-    display: inline;
-    flex-direction: row;
-    min-height: 100px;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    text-align: center;
-    font-size: 2.5vw;
-    color: #FFFFCB;
-  }
-.gridbody .heading img{
-   width: 8vw;
- }
-.gridbody .heading h1 {
-   float: right;
- }
- 
- /* NAVIGATION SETUP*/
- .gridbody .navigation {
-  text-align: center; 
-  background-color: transparent; 
-  margin-left: auto;
-  margin-right: auto;
-  height: 400px;
-  width: 100%;
- }
- .gridbody .navigation h2 {
-   font-size: 2.4rem;
-}
-.gridbody .navigation a {
-  color: rgb(243, 240, 30);
-}
-.gridbody .navigation a:hover {
-  color: rgb(0, 14, 139);
+  max-width: 1340px;
 }
 
-/* FOOTER SETUP */
+.left-frame-top, .left-frame {
+  width: 190px;
+  min-width: 190px;
+  text-align: right;
+  font-size: .88rem;
+  font-weight: bold;
+  color: #000;
+}
+
+.left-frame-top {
+  background-color: #9D9DFF;
+  border-radius: 0 0 0 100px;
+}
+
+.left-frame-top a, .left-frame a {
+  text-decoration: none;
+  color: #000;
+}
+
+.left-frame {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 90px;
+  background-color: #FFFFCB;
+  border-radius: 100px 0 0 0;
+}
+
+.panel-1 a {
+  display: block;
+  background-color: #F2DF6F;
+  padding: 82px 10px 15px 0;
+  text-decoration: none;
+  color: #000;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.panel-1 a:active, .panel-1 a:focus {
+  filter: brightness(70%);
+  text-decoration: none;
+  border-bottom: none;
+  outline: none;
+}
+
+.panel-2 {
+  padding: 15px 10px 0 0;
+}
+
+.right-frame-top {
+  flex: 1;
+  background-color: #000;
+}
+
+.banner {
+  padding: 0 0 15px 5px;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 1.2;
+  font-size: clamp(1.2rem, 1.3rem + 2.6vw, 3.1rem);
+  color: #FFFFCB;
+}
+
+.banner a {
+  color: #FFFFCB;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 500px) {
+  .banner {
+      padding: 5px 0 10px 3px;
+      font-size: 1.2rem;
+  }
+}
+
+.data-cascade-button-group {
+  display: flex;
+  justify-content: space-around;
+  column-gap: 25px;
+  
+}
+
+
+@media only screen and (max-width: 610px) {
+  .data-cascade-button-group {
+      column-gap: 0;
+  }
+}
+
+.cascade-wrapper {
+  flex: 1;
+  padding-right: 10px;
+}
+
+@media only screen and (min-width: 1080px) {
+  .cascade-wrapper {
+      padding-left: 25px;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .cascade-wrapper {
+      display: none;
+  }
+}
+
+.button-col, .button-col-1, .button-col-2 {
+  width: 190px;
+}
+
+.button-col div:last-of-type, .button-col-1 div:last-of-type, .button-col-2 div:last-of-type {
+  margin-bottom: -15px;
+}
+
+@media only screen and (max-width: 610px) {
+  .button-col, .button-col-1, .button-col-2 {
+      width: auto;
+      border-left: 15px solid black;
+  }
+}
+
+.button a {
+  display: block;
+  width: 200px;
+  height: 40px;
+  padding:0;
+  border-radius: 26px;
+  background-color: #9D9DFF;
+  margin: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000;
+}
+
+.button#top-left a {
+  background-color: #9D9DFF;
+}
+
+.button#bottom-left a {
+  background-color: #CF6262;
+}
+
+.button#top-right a {
+  background-color: #FFFFCB;
+  
+}
+
+.button#bottom-right a {
+  background-color: #CF9DCF;
+  
+}
+
+.button a:active, .button a:focus {
+  filter: brightness(70%);
+  border: none;
+  outline: none;
+  animation: none;
+}
+
+@media only screen and (max-width: 500px) {
+  .button a {
+      height: 44px;
+      padding-top: 10px;
+      width: 142px;
+      border-radius: 20px;
+      font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 388px) {
+  .button a {
+      width: 134px;
+      font-size: .85rem;
+  }
+}
+
+.top-corner-bg {
+  width: 40px;
+  height: 40px;
+  background: linear-gradient(to top right, #9D9DFF 50%, #000 50%);
+}
+
+.top-corner {
+  width: 40px;
+  height: 40px;
+  background-color: #000;
+  border-radius: 0 0 0 40px;
+}
+
+.bar-panel {
+  display: flex;
+  height: 22px;
+}
+
+.bar-1, .bar-2, .bar-3, .bar-4, .bar-5, .bar-6, .bar-7, .bar-9, .bar-10 {
+  height: 22px;
+}
+
+.bar-1, .bar-2, .bar-3, .bar-4, .bar-6, .bar-7, .bar-8, .bar-9 {
+  border-right: 5px solid #000;
+}
+
+.bar-1, .bar-6 {
+  transition: width 1s;
+}
+
+.bar-1 {
+  width: 433px;
+  background-color: #9D9DFF;
+}
+
+.bar-2 {
+  width: 40px;
+  background-color: #FF9800;
+}
+
+.bar-3 {
+  width: 200px;
+  background-color: #FFFFCB;
+}
+
+.bar-4 {
+  flex: 1;
+  background-color: #99CDFF;
+}
+
+.bar-5 {
+  width: 50px;
+  background-color: #FF9800;
+}
+
+.bar-6 {
+  width: 433px;
+  background-color: #FFFFCB;
+}
+
+.bar-7 {
+  width: 40px;
+  background-color: #9D9DFF;
+}
+
+.bar-8 {
+  width: 200px;
+  height: 11px;
+  background-color: #CF6262;
+}
+
+.bar-9 {
+  flex: 1;
+  background-color: #c8f;
+}
+
+.bar-10 {
+  width: 50px;
+  background-color: #FFFFCB;
+}
+
+#gap {
+  margin-top: 10px;
+}
+
+.panel-1, .panel-3, .panel-4, .panel-5, .panel-6, .panel-7, .panel-8 {
+  border-bottom: 5px solid #000;
+}
+
+.panel-3 {
+  padding: 0 10px 15px 0;
+  background-color: #FFFFCB;
+}
+
+.panel-4 {
+  padding: 180px 10px 15px 0;
+  background-color: #99CDFF;
+}
+
+.panel-5 {
+  padding: 25px 10px 25px 0;
+  background-color: #FF9800;
+}
+
+.panel-6 {
+  padding: 230px 10px 15px 0;
+  background-color: #FFFFCB;
+}
+
+.panel-7 {
+  padding: 15px 10px 300px 0;
+  background-color: #9D9DFF;
+}
+
+.panel-8 {
+  padding: 15px 10px 110px 0;
+  background-color: #ffaa90;
+}
+
+
+.right-frame {
+  flex: 1;
+  background-color: #000;
+}
+
+.corner-bg {
+  width: 40px;
+  height: 40px;
+  background: linear-gradient(to bottom right, #FFFFCB 50%, #000 50%);
+}
+
+.corner {
+  width: 40px;
+  height: 40px;
+  background-color: #000;
+  border-radius: 40px 0 0 0;
+}
+
+.content {
+  padding: 0 0 25px 50px;
+  background-color: #000;
+}
+
+.content > * :first-child {
+  margin-top: 0;
+}
+
+.content img {
+  max-width: 100%;
+  height: auto;
+}
+
+.flexbox {
+  display: flex;
+  column-gap: 2vw;
+  flex-wrap: wrap;
+}
+
+.col{
+  flex: 1 1 300px;
+}
+.col p{
+  font-size: 20px;
+}
+
+h1, h2, h3 {
+  margin: 30px 0;
+  font-weight: normal;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: clamp(1.6rem, 1.6rem + 2.7vw, 3.34rem);
+  text-align: right;
+}
+
+h2 {
+  font-size: clamp(1.2rem, 1.2rem + 2vw, 2rem);
+}
+
+h3 {
+  font-size: clamp(1.1rem, 1rem + 2vw, 1.8rem)
+}
+
+p.caption {
+  margin-top: 10px;
+  margin-bottom: 0;
+  text-align: center;
+  font-size: .88rem;
+}
+
+p.indent {
+  padding-left: 40px;
+}
+
+p.postmeta {
+  margin-top: 0;
+  text-align: right;
+  font-size: clamp(1rem, .85rem + 1.4vw, 1.6rem);
+  text-transform: uppercase;
+}
+
+.logging h1 {
+  margin-bottom: 0;
+}
+
+.go-center {
+  text-align: center !important;
+}
+
+.go-right {
+  text-align: right !important;
+}
+
+.go-left {
+  text-align: left !important;
+}
+
+.go-big {
+  font-size: 1.3rem;
+}
+
+.go-bigger {
+  font-size: 1.5rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.strike {
+  text-decoration: line-through;
+}
+
+.now {
+  white-space: nowrap;
+}
+
+.blink-slower1 {
+  animation: blink 5s infinite;
+  animation-delay: 1s;
+  font-size: 20px;
+}
+.blink-slower2 {
+  animation: blink 5s infinite;
+  animation-delay: 1.5s;
+  font-size: 20px;
+}
+.blink-slower3 {
+  animation: blink 5s infinite;
+  animation-delay: 1.3s;
+  font-size: 20px;
+}
+.blink-slower4 {
+  animation: blink 5s infinite;
+  animation-delay: 1.9s;
+  font-size: 20px;
+}
+.blink {
+  animation: blink 2s infinite;
+  animation-delay: 1s;
+}
+
+.pics {
+  display: block;
+  margin: 30px auto 0 auto;
+}
+
+.border {
+  padding: 10px;
+  border: 2px solid #c8f;
+}
+
+.lcars-list {
+  list-style: none;
+}
+
+.lcars-list li {
+  position: relative;
+  padding: 0 0 5px 42px;
+  font-size: 1.3rem;
+}
+
+.lcars-list li::before {
+  content: '';
+  display: block;
+  width: 30px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #c8f;
+  position: absolute;
+  top: 13px;
+  left: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .lcars-list {
+      margin-left: 0;
+      padding-left: 0;
+  }
+
+  .lcars-list li::before {
+      top: 10px;
+  }
+}
+
+.buttons {
+  margin-top: 35px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.jc-space-between {
+  justify-content: space-between;
+}
+
+.jc-center {
+  justify-content: center;
+}
+
+.jc-flex-end {
+  justify-content: flex-end;
+}
+
+.jc-space-around {
+  justify-content: space-around;
+}
+
+.jc-space-evenly {
+  justify-content: space-evenly;
+}
+
+.buttons a {
+  display: block;
+  margin: 0 8px 16px 8px;
+  width: 200px;
+  height: 60px;
+  padding: 24px 25px 0 0;
+  background-color: #c8f;
+  border-radius: 26px;
+  text-align: right;
+  line-height: normal;
+  text-decoration: none;
+  font-size: 22px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.buttons a:active, .buttons a:focus {
+  filter: brightness(70%);
+  outline: none;
+}
+
+.buttons a.two-rows {
+  font-size: 21px;
+  padding-top: 2px;
+}
+
+.sidebar-buttons a {
+  display: block;
+  text-decoration: none;
+  text-align: right;
+  border-bottom: 5px solid #000;
+  padding: 20px 10px 20px 2px;
+  background-color: #d44;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.sidebar-buttons a:hover {
+  filter: brightness(110%);
+}
+
+.sidebar-buttons a:active, .sidebar-buttons a:focus {
+  filter: brightness(80%);
+  outline: none;
+}
+
+@media only screen and (max-width: 500px) {
+  .sidebar-buttons a {
+      text-align: center;
+      padding: 10px 0;
+  }
+}
+
 footer {
   display: flex;
   bottom: 0;
   margin: 50px auto 0 auto;
   padding: 12px 0;
-  background: linear-gradient(#99CDFF 50%, #FFFFCB 50%);
+  background: linear-gradient(#99CDFF 50%, #CF6262 50%);
   border-radius: 0 20px 20px 0;
   overflow: hidden;
   position: relative;
   z-index: 1;
 }
+
+footer::before {
+  content: '';
+  background-color: #000;
+  display: block;
+  width: 5px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 25%;
+  overflow: hidden;
+}
+
+footer::after {
+  content: '';
+  background-color: #000;
+  display: block;
+  width: 2px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: -1px;
+  overflow: hidden;
+}
+
 .footer-panel {
   width: 12%;
   max-width: 130px;
-  height: 20px;
+  height: 100px;
   margin: auto;
   padding: 10px 0 0 1%;
   background-color: #F2DF6F;
@@ -128,34 +661,350 @@ footer {
 
 .footer-inside {
   flex: 1;
-  min-height: 100px;
+  min-height: 180px;
   background-color: #000;
   border-radius: 0 20px 20px 0;
   padding: 1.5rem 1rem;
   z-index: 2;
 }
 
+.footer-inside::before {
+  content: '';
+  background-color: #99CDFF;
+  display: block;
+  width: 15%;
+  min-width: 60px;
+  height: 10px;
+  position: absolute;
+  top: 17px;
+  left: 1px;
+  overflow: hidden;
+}
+
+.footer-inside::after {
+  content: '';
+  background-color: #CF6262;
+  display: block;
+  width: 15%;
+  min-width: 60px;
+  height: 10px;
+  position: absolute;
+  bottom: 12px;
+  left: 1px;
+  overflow: hidden;
+}
+
 .footer-text {
   display: flex;
   flex-direction: column;
-  min-height: 100px;
+  min-height: 146px;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
   text-align: center;
-  font-size: 1rem;
+  font-size: .94rem;
   color: #FFFFCB;
-}
-.footer-text .foot{
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 .footer-text > * {
   margin: 0;
 }
 
-.name {
-  color:black ;
+@media only screen and (max-width: 600px) {
+  footer::before {
+      left: 40%;
+  }
 }
+
+.footer {
+  margin: 0 auto;
+  font-size: .94rem;
+}
+
+@media only screen and (max-width: 1240px) {
+  .dc13, .dc14, .grid-3 {
+      display: none;
+  }
+
+  .bar-1, .bar-6 {
+      width: 320px;
+  }
+
+  .panel-4 {
+      padding-top: 115px;
+  }
+}
+
+@media only screen and (max-width: 1080px) {
+  .left-frame-top, .left-frame {
+      width: 170px;
+      min-width: 170px;
+  }
+
+  .scroll-top a {
+      width: 170px;
+  }
+
+  .dc12, .dc11, .dc10, .grid-1 {
+      display: none;
+  }
+
+  .bar-1, .bar-6 {
+      width: 290px;
+  }
+
+  .left-frame {
+      padding-top: 70px;
+  }
+
+  .content {
+      padding-left: 40px;
+  }
+}
+
+@media only screen and (max-width: 890px) {
+  .left-frame-top, .left-frame {
+      width: 130px;
+      min-width: 130px;
+  }
+
+  .left-frame-top {
+      border-radius: 0 0 0 80px;
+  }
+
+  .left-frame {
+      border-radius: 80px 0 0 0;
+  }
+
+  .scroll-top a {
+      width: 130px;
+      padding: 10px 0 0 0;
+      text-align: center;
+  }
+
+  .sutrebor {
+      margin: 4px 4px 19px 69px;
+  }
+
+  .bar-1, .bar-6 {
+      width: 180px;
+  }
+
+  .bar-3, .bar-8 {
+      width: 180px;
+  }
+
+  .content {
+      padding-left: 30px;
+  }
+
+  blockquote {
+      margin-right: 0;
+      margin-left: 25px;
+  }
+
+  .cut-out-top {
+      margin-left: 85px;
+  }
+
+  .cut-out {
+      margin-left: 85px;
+  }
+
+  .cut-out-float {
+      margin-left: 85px;
+  }
+
+  .dc7, .dc8, .dc9, .grid-2 {
+      display: none;
+  }
+
+  .pics-right, .pics-left {
+      float: none;
+      margin: 20px 0 20px 0;
+  }
+
+  .pics-right img, .pics-left img {
+      display: block;
+      margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 790px) {
+  .dc5, .dc6, .grid-4 {
+      display: none;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .left-frame-top, .left-frame {
+      width: 110px;
+      min-width: 110px;
+  }
+
+  .left-frame-top {
+      border-radius: 0 0 0 60px;
+  }
+
+  .left-frame {
+      border-radius: 60px 0 0 0;
+  }
+
+  .scroll-top a {
+      width: 110px;
+      height: 110px;
+  }
+
+  .bar-panel {
+      height: 16px;
+  }
+
+  .bar-1, .bar-2, .bar-3, .bar-4, .bar-5, .bar-6, .bar-7, .bar-9, .bar-10 {
+      height: 16px;
+  }
+
+  .bar-1, .bar-6 {
+      width: 130px;
+  }
+
+  .bar-3, .bar-8 {
+      width: 130px;
+  }
+
+  .bar-5, .bar-10 {
+      width: 25px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body {
+      padding: 0;
+  }
+
+  .wrap {
+      padding-left: 0;
+  }
+
+  .left-frame-top, .left-frame {
+      width: 60px;
+      min-width: 60px;
+      font-size: .8rem;
+  }
+
+  .left-frame-top {
+      border-radius: 0 0 0 26px;
+  }
+
+  .left-frame {
+      border-radius: 26px 0 0 0;
+      padding-top: 50px;
+  }
+
+  .scroll-top a {
+      width: 60px;
+  }
+
+  .panel-1 a {
+      padding-top: 30px;
+  }
+
+  .panel-2 {
+      padding-bottom: 15px;
+      border-bottom: 5px solid #000;
+      background-color: #78f;
+  }
+
+  .panel-6 {
+      padding-top: 150px;
+  }
+
+  .hop {
+      display: none;
+  }
+
+  .top-corner-bg {
+      width: 25px;
+      height: 25px;
+  }
+
+  .top-corner {
+      width: 25px;
+      height: 25px;
+      border-radius: 0 0 0 20px;
+  }
+
+  .bar-panel {
+      height: 10px;
+  }
+
+  .bar-1, .bar-2, .bar-3, .bar-4, .bar-5, .bar-6, .bar-7, .bar-9, .bar-10 {
+      height: 10px;
+  }
+
+  .bar-3, .bar-8 {
+      width: 80px;
+  }
+
+  .bar-2, .bar-7 {
+      width: 25px;
+  }
+
+  .bar-8 {
+      height: 5px;
+  }
+
+  #gap {
+      margin-top: 5px;
+  }
+
+  .corner-bg {
+      width: 25px;
+      height: 25px;
+  }
+
+  .corner {
+      width: 25px;
+      height: 25px;
+      border-radius: 20px 0 0 0;
+  }
+
+  .panel-4 {
+      padding-top: 65px;
+  }
+
+  .content {
+      padding: 0 0 20px 15px;
+  }
+
+  p.indent {
+      padding-left: 20px;
+  }
+
+  blockquote {
+      margin: 25px 0 25px 20px;
+  }
+
+  .lcars-bar-cutout {
+      margin: 0 auto;
+      width: 80px;
+      height: 8px;
+  }
+
+  .lcars-bar-slice-top {
+      margin: 30px auto -30px auto;
+      width: 80px;
+      height: 6px;
+  }
+
+  .lcars-bar-slice-bottom {
+      width: 80px;
+  }
+}
+
+@media only screen and (max-width: 388px) {
+  .bar-1, .bar-6 {
+      width: 90px;
+  }
+}
+
 
